# EyeGuard

./: .gitignore  DESIGN.md  EyeGuard_SRS_Final .md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
mockups/: ac-pixel-crt.html  d-cockpit.html  e-plant-full.html  e-plant.html  f-zine.html  g-manuscript.html  h-tearoom.html  i-rpg.html  index.html  j-steampunk.html  sketchbook.html
scripts/: generate-icons.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sql/: schema.sql
src-tauri/src/: database.rs  footprint.rs  fullscreen.rs  lib.rs  main.rs  monitor.rs  tray.rs
src/components/: AlertToast.tsx  BreakOverlay.tsx  ConfettiBurst.tsx  ErrorBoundary.tsx  EyeExercise.tsx  FollowupToast.tsx  HeroTimer.tsx  Logo.tsx  MetricRing.tsx  MetricRingsRow.tsx  OnboardingCard.tsx  PomodoroProgress.tsx  SleepingEye.tsx  TopBar.tsx
src/hooks/: useActivityBridge.ts  useAlertOrchestrator.ts  useBreakLogger.ts  useFootprintBridge.ts  useHotkeys.ts  useSettingsSync.ts  useTrayBridge.ts
src/i18n/: en.json  index.ts  zh.json
src/lib/: categoryPresets.ts  db.ts  dndPresets.ts  export.ts  fileSave.ts  settingsBackup.ts  themeListener.ts
src/pages/: PlaceholderPage.tsx  PomodoroPage.tsx  SettingsPage.tsx  StatsPage.tsx  TimerPage.tsx
src/stores/: diagnosticsStore.ts  followupStore.ts  footprintStore.ts  settingsStore.ts  timerStore.ts
src/windows/: BreakWindow.tsx  NotificationApp.tsx
(+15 files in other folders)
