[package]
name = "eyeguard"
version = "0.1.0"
description = "EyeGuard - Smart eye-care assistant for desktop"
authors = ["EyeGuard Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "eyeguard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
